# rsds

./: LICENSE  README.md  pyproject.toml
data/: config.json
src/rsds/eda/: __init__.py  numeric_plots.py  pca.py  vis_utils.py
src/rsds/utilities/: __init__.py  check.py  config.py  reduce_memory_usage.py
src/rsds/utilities/transform/: core.py
src/rsds/visualise/: __init__.py  numeric_plots.py  vis_utils.py
