[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy>=1.23.0",
  "pandas>=1.4.3",
]
description = "Functions to assist data science tasks"
name = "rsds"
readme = "README.md"
version = "0.0.1"
